; ModuleID = '/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_rndr_linebreak.c'
source_filename = "/home/carl/AnghaBench/redcarpet/ext/redcarpet/extr_html.c_rndr_linebreak.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.buf = type { i32 }
%struct.html_renderopt = type { i32 }

@.str = private unnamed_addr constant [7 x i8] c"<br/>\0A\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"<br>\0A\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (%struct.buf*, i8*)* @rndr_linebreak to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @rndr_linebreak(%struct.buf* %0, i8* %1) #0 {
  %3 = alloca %struct.buf*, align 8
  %4 = alloca i8*, align 8
  %5 = alloca %struct.html_renderopt*, align 8
  store %struct.buf* %0, %struct.buf** %3, align 8
  store i8* %1, i8** %4, align 8
  %6 = load i8*, i8** %4, align 8
  %7 = bitcast i8* %6 to %struct.html_renderopt*
  store %struct.html_renderopt* %7, %struct.html_renderopt** %5, align 8
  %8 = load %struct.buf*, %struct.buf** %3, align 8
  %9 = load %struct.html_renderopt*, %struct.html_renderopt** %5, align 8
  %10 = call i64 @USE_XHTML(%struct.html_renderopt* %9)
  %11 = icmp ne i64 %10, 0
  %12 = zext i1 %11 to i64
  %13 = select i1 %11, i8* getelementptr inbounds ([7 x i8], [7 x i8]* @.str, i64 0, i64 0), i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0)
  %14 = call i32 @bufputs(%struct.buf* %8, i8* %13)
  ret i32 1
}

declare dso_local i32 @bufputs(%struct.buf*, i8*) #1

declare dso_local i64 @USE_XHTML(%struct.html_renderopt*) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
